syntax = "proto3";

package pb;

option go_package = ".;pb";

service Agent {
    rpc FindCreateGroup(FCGroupReq) returns (FCGroupRes) {}
    rpc FindCreateGraph(FCGraphReq) returns (FCGraphRes) {}
    rpc FindCreateMetric(FCMetricReq) returns (FCMetricRes) {}
}

message FCGroupReq {
    int64 appID = 1;
    string name = 2;
}

message FCGroupRes {
    int64 id = 1;
}

message FCGraphReq {
    int64 appID = 1;
	string title = 2;
	string unit = 3;
	int64 groupID = 4;
}

message FCGraphRes {
	int64 id = 1;
}

message FCMetricReq {
    int64 appID = 1;
	string title = 2;
	string type = 3;
	int64 graphID = 4;
}
message FCMetricRes {
	int64 id = 1;
}